Mudança radical e inclusão de Itens CSS

--- a/Curso Desenvolvimento Web/HTML e CSS/HTML/Projetos/Recicla /info.html
+++ b/Curso Desenvolvimento Web/HTML e CSS/HTML/Projetos/Recicla /info.html
@@ -35,10 +35,12 @@ Feito como exemplo para uso de propriedades aprendidas
 </body>
   <div style="margin: auto;width:900px;">
     
-    <div style="display:block;margin-left: auto;margin-right: auto;">
+    <span>
       <img src="recursos/imagens/empresa_1.jpg" alt="Instalações da empresa" height=250px>
+    </span>
+    <span>
       <img src="recursos/imagens/empresa_2.jpg" alt="Instalações da empresa" height=250px>
-    </div>
+    </span>
     
     <p>Mauris lobortis pulvinar iaculis. Nullam velit dui, rhoncus ac faucibus et, aliquet vitae metus. Curabitur blandit ipsum lacus, sed ultrices ante feugiat quis. Vestibulum sed rutrum odio. Etiam augue felis, bibendum tempus ex eget, rutrum varius orci. Nunc nunc quam, scelerisque in augue ut, suscipit pretium diam. Interdum et malesuada fames ac ante ipsum primis in faucibus. Cras turpis diam, efficitur sed laoreet ac, luctus ut eros. Vestibulum tincidunt vehicula ligula, at ullamcorper ipsum venenatis sit amet. Vestibulum sit amet metus eget nisi dignissim lacinia ut nec arcu. Pellentesque eu quam elit. Nunc facilisis fringilla dolor pretium placerat. Nunc lorem lectus, suscipit at ullamcorper in, accumsan ac dolor. Duis eleifend suscipit libero, sed viverra leo elementum id. Aenean placerat non orci ac tempus. Donec velit nibh, consectetur ullamcorper viverra eu, euismod ut nibh.</p>
 
